@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+
+  GIRAPH-356: Improve ZooKeeper issues. (aching)
+
   GIRAPH-342: Recursive ZooKeeper calls should call progress, dynamic 
   ZooKeeper can skip delete (aching via majakabiljo)
 
